fix: filters should wrap

--- a/src/components/sections/employees/employees.module.css
+++ b/src/components/sections/employees/employees.module.css
@@ -16,15 +16,18 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  grid-column: 1 / -1;
 }
 
 .employeeFilterWrapper {
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   gap: 0.75rem;
 }
 
 .employeeFilterLabel {
+  flex-shrink: 0;
   min-width: 4.5rem;
   width: 4.5rem;
 }
